[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "headcount-reporting"
version = "0.0.1"
description = "Create headcount reporting"
authors = [
  { name = "Sven Zeidler" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["headcount-reporting"]
include = ["pyproject.toml", "headcount-reporting/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["headcount-reporting"]
force-sort-within-sections = true

